# omniswap-sdk

./: CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  README.md  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
articles/: building-privacy-preserving-swap-sdk.md  intent-blind-matching-analysis.md  timelock-privacy-csprng-lognormal.md  why-htlc-for-privacy-cross-chain.md
docs/: 01-introduction.md  02-use-cases.md  03-api-reference.md  04-how-to-guides.md  05-faq.md  README.md  index.md  introduction.md  quick-start.md
examples/: basic-swap.ts  error-handling.ts  multi-chain.ts  privacy-swap.ts  refund-monitoring.ts
src/: index.ts  omniswap.ts
src/adapters/: aztec.ts  base.ts  fhenix.ts  index.ts  miden.ts  mina.ts  osmosis.ts  zcash-wasm.ts  zcash.ts
src/core/: api-client.ts  htlc-coordinator.ts  index.ts  privacy-hub.ts  quote-engine.ts  refund-manager.ts  router.ts
src/types/: index.ts
src/utils/: errors.ts  index.ts  retry.ts
tests/: setup.ts
tests/integration/: cross-chain-swap.test.ts
tests/unit/: adapters.test.ts  htlc-coordinator.test.ts  privacy-hub.test.ts  router.test.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
website/: README.md  index.html  styles.css
